--- a/fcc_predict_health_costs_with_regression.ipynb
+++ b/fcc_predict_health_costs_with_regression.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Gourdy09/machine_learning_certification_code/blob/main/fcc_predict_health_costs_with_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -26,7 +36,12 @@
         "\n",
         "import tensorflow_docs as tfdocs\n",
         "import tensorflow_docs.plots\n",
-        "import tensorflow_docs.modeling"
+        "import tensorflow_docs.modeling\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from tensorflow.keras.layers import BatchNormalization, Dropout\n",
+        "from tensorflow.keras.optimizers import Adam"
       ]
     },
     {
@@ -50,7 +65,33 @@
         "id": "LcopvQh3X-kX"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Transform categorical data to numbers\n",
+        "label_encoder = LabelEncoder()\n",
+        "dataset['sex'] = label_encoder.fit_transform(dataset['sex']) # 1 - male, 0 - female\n",
+        "dataset['smoker'] = label_encoder.fit_transform(dataset['smoker']) # 0 - no, 1 - yes\n",
+        "dataset['region'] = label_encoder.fit_transform(dataset['region']) # 1 - northwest, 0 - northeast, 2 - southeast, 3 - southwest\n",
+        "\n",
+        "# Split 80% to train_datest, 20% to test_dataset\n",
+        "train_dataset, test_dataset = train_test_split(dataset, test_size=0.2, random_state=42)\n",
+        "train_labels, test_labels = train_dataset.pop(\"expenses\"), test_dataset.pop(\"expenses\")\n",
+        "\n",
+        "# Create Model\n",
+        "model = tf.keras.Sequential([\n",
+        "    tf.keras.layers.InputLayer(input_shape=(train_dataset.shape[1],)),\n",
+        "    tf.keras.layers.Dense(128, activation='relu'),\n",
+        "    BatchNormalization(),\n",
+        "    Dropout(0.3),\n",
+        "    tf.keras.layers.Dense(64, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "# Compile the model with Adam optimizer and additional metrics\n",
+        "model.compile(optimizer=Adam(learning_rate=0.001), loss='mean_squared_error', metrics=['mae', 'mse'])\n",
+        "\n",
+        "# Train the model\n",
+        "model.fit(train_dataset, train_labels, epochs=500, batch_size=32, shuffle=True, validation_data=(test_dataset, test_labels))"
+      ]
     },
     {
       "cell_type": "code",
@@ -90,7 +131,8 @@
       "name": "fcc_predict_health_costs_with_regression.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
